# obs-livesplit

./: Cargo.toml  README.md  install.sh
src/: config.rs  lib.rs
