[package]
name = "obs-livesplit"
version = "0.1.0"
edition = "2021"

[lib]
name = "livesplit"
crate-type = ["cdylib"]

[dependencies]
obs-wrapper = "0.4"
# TODO: upstream auto-saving (and maybe image loading from URL)
livesplit-core = { git = "https://github.com/P1n3appl3/livesplit-core", features = [
  "software-rendering",
  "font-loading",
  "auto-splitting",
] }
notify = "4"
log = "0.4"

[profile.release]
lto = "thin"
panic = "abort"
